--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=postgres:secret@127.0.0.1:5432/operators-metrics
+ELASTICSEARCH_URL=http://127.0.0.1:9200
+ELASTICSEARCH_USERNAME=test
+ELASTICSEARCH_PASSWORD=test
