--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "name": "@joystream/operators-monitor-api",
-  "version": "0.1.0",
-  "description": "API to accept metrics for Joystream monitors",
+  "version": "0.2.0",
+  "description": "API to accept Joystream distributors test results",
   "license": "ISC",
+  "type": "module",
+  "scripts": {
+    "dev": "ts-node --esm src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc"
+  },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.7.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "pg": "^8.10.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.0",
-    "sequelize-cli": "^6.6.0"
+    "morgan": "^1.10.0"
   },
-  "scripts": {}
+  "devDependencies": {
+    "@tsconfig/recommended": "^1.0.2",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.1.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
+    "zod": "^3.21.4"
+  }
 }
